# bq769x0-async-rs

./: BQ769x0_CRC_Implementation_Plan.md  BQ769x0_Code_Splitting_Plan.md  BQ769x0_Driver_Plan.md  BQ769x0_No_Float_Plan.md  BQ769x0_Refactoring_Plan.md  BQ769x0_SYS_STAT_Fix_Plan.md  BQ769x0_Test_Fix_Plan.md  Cargo.toml  LICENSE-APACHE  PLAN.md  README.md  lefthook.yml
docs/: bq76920.md
examples/stm32g4/: Cargo.toml  bq76920_stm32g431cb_example_plan.md
examples/stm32g4/src/: main.rs
src/: crc.rs  data_types.rs  errors.rs  lib.rs  registers.rs  units.rs
tests/: basic.rs  binrw_support.rs  common.rs  init_basic.rs  other_config.rs  protection_config.rs  status_monitor.rs
